fixed small word-wrap issue on commission index

--- a/css/commission/commission_index.css
+++ b/css/commission/commission_index.css
@@ -1,4 +1,11 @@
 
+#current-step-title, #current-step-description {
+  overflow-wrap: break-word;
+  /* Safari compatability */
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
 /*
   Steps Bar
 ------------------------------------------------
